--- a/experiencia/index.html
+++ b/experiencia/index.html
@@ -27,6 +27,55 @@ $(document).ready(function() {
     });
 });
 
+let file_information = "";
+
+var get_language = localStorage.getItem("language_mode");
+
+if(get_language == "spanish") {
+    file_information = "../informacion.json";
+} else {
+    file_information = "../information_english.json";
+}
+
+function changeLanguage() {
+  var get_language = localStorage.getItem("language_mode");
+  if(get_language == "spanish") {
+      localStorage.setItem("language_mode", "english");
+  }
+  else {
+      localStorage.setItem("language_mode", "spanish");
+  }
+  location.reload();
+}
+
+loadJSON(file_information, function (main_response) {
+    var main_data = JSON.parse(main_response);
+    let title_page_json = main_data[1].title;
+    let language_json = main_data[3].language_mode;
+    let leyend_footer_json = main_data[3].leyend_footer;
+    let menu_inicio = main_data[3].menu[0];
+    let menu_conocimiento = main_data[3].menu[1];
+    let menu_experiencia = main_data[3].menu[2];
+    let menu_certificados = main_data[3].menu[3];
+
+    const title_page = document.getElementById('title_page');
+    const m_inicio = document.getElementById('inicio');
+    const m_conocimiento = document.getElementById('conocimiento');
+    const m_experiencia = document.getElementById('experiencia');
+    const m_certificados = document.getElementById('materias');
+    const language_mode = document.getElementById('language_mode');
+    const leyend_footer = document.getElementById('leyend_footer');
+
+    title_page.innerHTML = title_page_json;
+    m_inicio.innerHTML = menu_inicio;
+    m_conocimiento.innerHTML = menu_conocimiento;
+    m_experiencia.innerHTML = menu_experiencia;
+    m_certificados.innerHTML = menu_certificados;
+    language_mode.innerHTML = language_json;
+    leyend_footer.innerHTML = leyend_footer_json;
+
+});
+
 </script>
 
 </head>
@@ -35,8 +84,11 @@ $(document).ready(function() {
   <div class="mayor">
     <div class="superior">
         <div class="cuadro-superior">
-            <img src="../img/logo.png" class="logo">
-            <p class="principal-text">Experiencia de Trabajo</p>
+            <div class="title_logo">
+                <img src="../img/logo.png" class="logo">
+                <p class="principal-text" id="title_page">Experiencia de Trabajo</p>
+            </div>
+            <span onclick="changeLanguage()" id="language_mode" class="information_language">English mode</span>
         </div>
     </div>
     <div class="cuadro-menu">
@@ -46,7 +98,7 @@ $(document).ready(function() {
             <ul>
                 <a href="../menu/" ><li class="bordito" id="inicio">Inicio</li></a>
                 <a href="../conocimientos/" ><li class="bordito" id="conocimiento">Conocimientos</li></a>
-                <a href="../experiencia/"><li class="bordito1">Experiencia</li></a>
+                <a href="../experiencia/"><li class="bordito1" id="experiencia">Experiencia</li></a>
                 <a href="../menu/material/"><li id="materias">Certificaciones</li></a>
             </ul>
         </nav>
@@ -54,7 +106,7 @@ $(document).ready(function() {
     </div>
     <div class="cuerpo">
 		<script>
-			loadJSON("../informacion.json", function (response) {
+			loadJSON(file_information, function (response) {
 				var datos = JSON.parse(response);
 				var cadena = "";
 				var longitud = datos[1].proyectos.length - 1;
@@ -70,7 +122,7 @@ $(document).ready(function() {
 </div>
     <footer>
         <div class="pie">
-            <p class="texto-pie">¡Gracias por su visita!</p>
+            <p class="texto-pie" id="leyend_footer">¡Gracias por su visita!</p>
         </div>
     </footer>
 </body>
