Small changes in desing in all the website

--- a/conocimientos/proyectos/index.html
+++ b/conocimientos/proyectos/index.html
@@ -56,7 +56,7 @@
                 <nav id="nav">
                     <ul>
                         <a href="../../menu/"><li class="bordito" id="inicio">Inicio</li></a>
-                        <a href="../"><li class="bordito" id="conocimientos">Conocimientos</li></a>
+                        <a href="../"><li class="bordito1" id="conocimientos">Conocimientos</li></a>
                         <a href="../../experiencia/"><li class="bordito" id="experiencia">Experiencia</li></a>
                         <a href="../../menu/material/"><li id="certificados">Certificaciones</li></a>
                     </ul>
