--- a/menu/material/index.html
+++ b/menu/material/index.html
@@ -33,7 +33,7 @@
                   <a href="../../menu/" ><li class="bordito" id="inicio">Inicio</li></a>
                   <a href="../../conocimientos/" ><li class="bordito" id="conocimiento">Conocimientos</li></a>
                   <a href="../../experiencia/"><li class="bordito" id="experiencia">Experiencia</li></a>
-                  <a href="../material/"><li id="certificados">Certificaciones</li></a>
+                  <a href="../material/"><li class="bordito1" id="certificados">Certificaciones</li></a>
               </ul>
           </nav>
        </div>
