--- a/conocimientos/proyectos/sistema/index.html
+++ b/conocimientos/proyectos/sistema/index.html
@@ -16,6 +16,16 @@
 <script type="text/javascript" src="../../../js/funciones.js"></script>
 <script src="js/funciones.js"></script>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141598500-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-141598500-1');
+</script>
+
 </head>
 <body>
     <div class="superior">
@@ -88,6 +98,9 @@
 
     <footer>
         <div class="pie">
+            <a href="https://github.com/Gianni-A" target="_blank"><svg class="links_foteer" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25"><path fill="#fff" class="icon_link" d="M24.917 12.802c0 2.706-.79 5.139-2.37 7.3-1.58 2.162-3.619 3.657-6.117 4.487-.292.054-.506.016-.64-.114a.643.643 0 0 1-.202-.485v-3.41c0-1.04-.28-1.803-.84-2.29.613-.06 1.165-.156 1.656-.29.49-.133.997-.343 1.52-.63a4.426 4.426 0 0 0 1.31-1.07c.35-.426.636-.991.857-1.693.22-.702.334-1.512.34-2.432 0-1.303-.424-2.413-1.27-3.33.4-.98.356-2.08-.13-3.3-.3-.095-.737-.035-1.31.18a8.497 8.497 0 0 0-1.484.71l-.615.39a11.48 11.48 0 0 0-3.104-.42c-1.068 0-2.104.137-3.11.41-.174-.12-.402-.265-.686-.436-.284-.17-.734-.379-1.35-.625-.616-.246-1.082-.319-1.396-.22-.474 1.214-.511 2.31-.113 3.29-.854.92-1.28 2.031-1.28 3.332 0 .92.11 1.73.33 2.43.22.7.503 1.266.85 1.698.346.432.782.792 1.306 1.08.524.288 1.03.498 1.52.63a10.27 10.27 0 0 0 1.656.29c-.434.391-.7.948-.8 1.67-.227.107-.47.187-.73.24-.26.054-.568.08-.923.08-.356 0-.709-.115-1.06-.347-.352-.231-.651-.568-.897-1.01a2.607 2.607 0 0 0-.783-.84c-.318-.215-.585-.345-.8-.39l-.324-.047c-.227 0-.384.025-.47.073-.087.049-.114.111-.08.185a.948.948 0 0 0 .145.227c.063.077.133.144.21.2l.114.08c.238.107.474.314.706.62.232.307.402.581.51.823l.16.37c.14.41.377.742.713.995.335.254.696.414 1.083.482.386.068.76.106 1.12.114.36.008.66-.011.9-.057l.37-.064a200.435 200.435 0 0 0 .016 2.31c0 .194-.07.354-.21.48-.14.127-.355.165-.645.113-2.494-.833-4.53-2.33-6.11-4.492-1.58-2.161-2.374-4.594-2.38-7.3 0-2.253.556-4.33 1.668-6.232a12.402 12.402 0 0 1 4.517-4.518C8.164.939 10.242.384 12.5.386c2.257.002 4.335.557 6.233 1.665a12.388 12.388 0 0 1 4.518 4.52c1.114 1.906 1.67 3.982 1.67 6.23z"></path></svg></a>
+            <a href="https://www.linkedin.com/in/gianni-alvarado-cordero-6476b5147/" target="_blank"><svg class="links_foteer links_foteer_left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25"><path fill="#fff" class="icon_link" d="M5.68 8.317v16.13H.31V8.317h5.37zm.342-4.98q.016 1.188-.822 1.985t-2.205.798h-.033q-1.334 0-2.148-.798T0 3.337q0-1.205.838-1.994t2.19-.79 2.164.79.83 1.994zM25 15.202v9.245h-5.355V15.82q0-1.71-.66-2.677t-2.058-.97q-1.025 0-1.717.563t-1.034 1.392q-.18.488-.18 1.318v9H8.644q.032-6.494.032-10.53T8.66 9.098l-.017-.78h5.354v2.343h-.032q.325-.52.667-.91t.92-.844 1.416-.708 1.863-.252q2.788 0 4.48 1.847t1.69 5.41z"></path></svg></a>
+            <a href="mailto:giannialvaradoc@gmail.com" target="_blank"><svg class="links_foteer links_foteer_left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25"><path fill="#fff" class="icon_link" d="M24.84 9.049v10.947c0 .606-.216 1.126-.648 1.56a2.128 2.128 0 0 1-1.558.647H2.338a2.124 2.124 0 0 1-1.558-.648 2.133 2.133 0 0 1-.648-1.56V9.051c.404.45.868.85 1.392 1.2 3.328 2.26 5.612 3.845 6.853 4.756.526.386.953.687 1.28.903.326.216.763.436 1.31.66.546.226 1.053.34 1.52.34h.03c.473 0 .98-.114 1.52-.34.546-.224.983-.444 1.31-.66a33.09 33.09 0 0 0 1.276-.904c1.562-1.134 3.85-2.72 6.866-4.76.524-.36.984-.76 1.38-1.2l-.024.004zm.024-4.058c0 .72-.225 1.413-.675 2.08a6.59 6.59 0 0 1-1.69 1.69l-6.46 4.48-.59.42c-.3.213-.549.386-.745.52-.197.133-.436.283-.717.45-.28.166-.544.29-.79.37-.247.08-.477.12-.69.12h-.025c-.21 0-.44-.042-.69-.125a4.272 4.272 0 0 1-.79-.37c-.28-.167-.519-.317-.715-.45a44.146 44.146 0 0 1-.748-.523c-.298-.218-.492-.36-.584-.424a721.312 721.312 0 0 0-3.61-2.516C3.773 9.622 2.826 8.976 2.506 8.776c-.571-.387-1.109-.918-1.614-1.592-.507-.674-.76-1.3-.76-1.88 0-.716.19-1.312.572-1.79.381-.478.926-.716 1.634-.716h20.296c.597 0 1.114.216 1.55.648.437.433.656.953.656 1.56l.024-.01z"></path></svg></a>
             <p class="texto-pie" id="leyend_footer">¡Gracias por su visita!</p>
         </div>
     </footer>
