--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@ Attribution-ShareAlike 2.0 Generic (CC BY-SA 2.0)
 	<script type="text/javascript" src="js/jquery.js"></script>
   <script type="text/javascript" src="js/funciones.js"></script>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141598500-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-141598500-1');
+</script>
+
 </head>
 <body>
 <div id="resultado"></div>
