fix nota language

--- a/conocimientos/proyectos/sistema/index.html
+++ b/conocimientos/proyectos/sistema/index.html
@@ -79,7 +79,7 @@
                 }
             }
             if (nota != ""){
-                cadena += "<div class='cuadro-nota'><p class='nota'><strong>Nota</strong>: "+nota+"</p></div>";
+                cadena += "<div class='cuadro-nota'><p class='nota'>"+nota+"</p></div>";
             }
             document.getElementById("resultado").innerHTML = cadena;
             document.getElementById("titulo").innerHTML = nombreLang;
